[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Enemy/Enemy2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemy/Enemy5.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemy/Enemy3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemy/Enemy4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemy/Enemy1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemy/Enemy6.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=7]
[ext_resource path="res://Sounds/Hurt.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "Run",
"speed": 4.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "Death",
"speed": 2.5
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Hurt",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 32 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -10, 0 )
enabled = true
cast_to = Vector2( 0, 35 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
